--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    
   </head>
 
   <body>
@@ -32,21 +34,46 @@
       <div class='user-name'>
           <h2>Your Name</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form>
+        <form action="/tweets" method="POST">
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <input 
+            type="textarea" 
+            name="text" 
+            id="tweet-text" 
+            >
+            <hr>
+          </input>
           <div>
             <button type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+            <output
+              id="counter" 
+              name="counter" 
+              class="counter" 
+              for="tweet-text">140
+            </output>
           </div>
         </form>
       </section>
+      <article class="tweet">
+        <header>
+          <div class='tweet-profile'>
+            <img class="tweet-profile-img" src="https://i.imgur.com/nlhLi3I.png">
+            <h3>Aldous Huxley</h3>
+        </div>
+        <p>@Huxley</p>
+        </header>
+        <p>This is the tweet section!</p>
+        <footer>
+          <p>timestamp</p>
+          <div><i>icon1</i><i>icon2</i><i>con3</i></div>
+        </footer>
+      </article>
     </main>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </body>
 </html>
