--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,20 @@
     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <script>
+      $( document ).ready(function() {
+          console.log( "document loaded" );
+      });
+   
+      $( window ).on( "load", function() {
+          console.log( "window loaded" );
+      });
+      </script>
     
   </head>
 
@@ -59,7 +70,7 @@
           </div>
         </form>
       </section>
-      <article class="tweet">
+      <!-- <article class="tweet">
         <header>
           <div class='tweet-profile'>
             <img class="tweet-profile-img" src="https://i.imgur.com/nlhLi3I.png">
@@ -67,13 +78,12 @@
         </div>
         <p>@Huxley</p>
         </header>
-        <p>This is the tweet section!</p>
+        <p class='tweet-section'>This is the tweet section!</p>
         <footer>
           <p>timestamp</p>
           <div><i>icon1</i><i>icon2</i><i>con3</i></div>
         </footer>
-      </article>
+      </article> -->
     </main>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </body>
 </html>
