--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
           </div>
         </form>
       </section>
+      <!--MENTOR QUESTION: Should I create a named section?-->
+      <!--OLD STUFF BELOW-->
       <!-- <article class="tweet">
         <header>
           <div class='tweet-profile'>
