code cleanup: remove unused and commented out code. small updates.

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             <hr>
           </input>
           <div>
-            <button type="submit">Tweet</button>
+            <button id="new-tweet-button" type="submit" disabled>Tweet</button>
             <output
               id="counter" 
               name="counter" 
