--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;700&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -16,11 +17,11 @@
     
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script src="https://kit.fontawesome.com/8e24f3e713.js" crossorigin="anonymous"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
     <script>
       $( document ).ready(function() {
@@ -44,7 +45,7 @@
           <img src="/images/profile-hex.png"> 
       </div>
       <div class='user-name'>
-          <h2>Your Name</h2>
+          <h2><b>Amy</b> Mansell</h2>
       </div>
     </header>
 
@@ -67,7 +68,7 @@
               id="counter" 
               name="counter" 
               class="counter" 
-              for="tweet-text">140
+              for="tweet-text">0 / 140
             </output>
           </div>
         </form>
