--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,10 @@
       <div class='avatar'>
           <img src="/images/profile-hex.png"> 
       </div>
-      <div id='user-name'>
+      <div id='account-name'>
           <h2><b>Amy</b> Mansell</h2>
+          <hr>
+          <p class='account-handle'>@amym</p>
       </div>
     </header>
 
@@ -69,13 +71,13 @@
             <hr>
           </input>
           <div>
-            <button id="new-tweet-button" type="submit" disabled>Tweet</button>
             <output
               id="counter" 
               name="counter" 
               class="counter" 
               for="tweet-text">0 / 140
             </output>
+            <button id="new-tweet-button" type="submit" disabled>Tweet</button>
           </div>
         </form>
       </section>
