--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
-    <script>
+    <!-- <script>
       $( document ).ready(function() {
           console.log( "document loaded" );
       });
@@ -33,7 +33,7 @@
       $( window ).on( "load", function() {
           console.log( "window loaded" );
       });
-      </script>
+      </script> -->
     
   </head>
   <body>
