--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/8e24f3e713.js" crossorigin="anonymous"></script>
 
+    <!-- QUESTION: should this be at the bottom on this file? -->
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
