set autofocus to textarea input

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,8 @@
           <textarea 
             rows=2 
             name="text" 
-            id="tweet-text" 
+            id="tweet-text"
+            autofocus 
             ></textarea>
             <hr>
           </input>
