Set focus to tweet on compose click

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     <nav>
       <span>Tweeter</span>
       <div>
-        <p><b>Write</b> a new tweet</p>
-        <div class="arrow bounce"><i class="fas fa-angle-double-down"></i></div>
+        <p class="compose-tweet"><b>Write</b> a new tweet</p>
+        <div class="compose-tweet arrow bounce"><i class="fas fa-angle-double-down"></i></div>
       </div>
     </nav>
     <header>
