Updated catch block for ajax errors

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <div id="error"><div class="fas fa-exclamation-circle"></div>&nbsp More than 140 characters! Try saying more with less...</div>
+        <div id="error"><div class="fas fa-exclamation-circle"></div><div id="error-msg">&nbsp More than 140 characters! Try saying more with less...</div></div>
         <form>
           <label id="tweet-label" for="tweet-text">What are you humming about?</label>
           <textarea 
